kubernetes/applications/adventurelog/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adventurelog-frontend
  namespace: adventure
  labels:
    app: adventure-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adventure-frontend
  template:
    metadata:
      name: adventure-frontend
      labels:
        app: adventure-frontend
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: adventure-frontend
          image: ghcr.io/seanmorley15/adventurelog-frontend:v0.12.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 3000
      restartPolicy: Always
