kubernetes/applications/adventurelog/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: adventure
spec:
  selector:
    app: adventure-frontend
  ports:
    - name: frotnend
      protocol: TCP
      port: 3000
      targetPort: 3000
