kubernetes/applications/adventurelog/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adventure-ui
  namespace: adventure
  labels:
    app: adventure-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    gethomepage.dev/description: The ultimate travel companion.
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: https://adventurelog.app/adventurelog.svg
    gethomepage.dev/name: AdventureLog
    gethomepage.dev/pod-selector: "app=adventure-frontend"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - &host trips.mcmumf.dev
      secretName: trips.mcmumf.dev-tls
  rules:
    - host: *host
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
